<resources>
    <string name="app_name">sanstech-assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matches">Matches</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="no_matches_to_show">There are currently no matches to show.</string>
    <string name="renewed">Renewed</string>
    <string name="filter_match">Filter Matches</string>
    <string name="match_status_all">All</string>
    <string name="match_status_schedule">Schedule</string>
    <string name="match_status_second_quarter">Second Quarter</string>
    <string name="match_status_half_time">Half Time</string>
    <string name="match_status_finished">Finished</string>
    <string name="match_status_deferred">Deferred</string>
    <string name="first_the_newest">First the newest</string>
    <string name="first_the_oldest">First the oldest</string>
    <string name="match_detail">Match Detail</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="score">Score</string>
    <string name="red_card_count">Red Card Count</string>
    <string name="match_status">Match Status</string>
</resources>