<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/rounded_top_5"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view"
        android:layout_width="70dp"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/alpine_goat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_roboto_medium"
        android:text="@string/sort"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/txtSortNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bold_roboto_regular"
        android:foreground="@drawable/ripple_10"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/first_the_newest"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtSortOld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold_roboto_regular"
        android:foreground="@drawable/ripple_10"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:text="@string/first_the_oldest"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/txtSortNew" />

</androidx.constraintlayout.widget.ConstraintLayout>