<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.matcheslist.MatchesListFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/font_poppins_semibold"
        android:text="@string/matches"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/icFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/icFilter" />


    <ImageView
        android:id="@+id/icFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:foreground="@drawable/ripple_10"
        android:focusable="true"
        android:clickable="true"
        android:padding="10dp"
        android:src="@drawable/ic_filter"
        android:contentDescription="@string/filter"
        app:layout_constraintBottom_toBottomOf="@+id/icSort"
        app:layout_constraintEnd_toStartOf="@+id/icSort"
        app:layout_constraintTop_toTopOf="@+id/icSort" />

    <ImageView
        android:id="@+id/icSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="@drawable/ripple_10"
        android:padding="10dp"
        android:src="@drawable/ic_sort"
        android:contentDescription="@string/sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMatches"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icFilter"
        tools:listitem="@layout/item_competition_header" />

</androidx.constraintlayout.widget.ConstraintLayout>