<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.matchdetails.MatchDetailsFragment">


    <ImageView
        android:id="@+id/icBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:foreground="@drawable/ripple_10"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_back_ios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/font_poppins_semibold"
        android:text="@string/match_detail"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/icBack"
        app:layout_constraintStart_toEndOf="@+id/icBack"
        app:layout_constraintTop_toTopOf="@+id/icBack" />

    <ImageView
        android:id="@+id/icCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/filter"
        android:focusable="true"
        android:foreground="@drawable/ripple_10"
        android:padding="10dp"
        android:src="@drawable/ic_content_copy"
        app:layout_constraintBottom_toBottomOf="@+id/icShare"
        app:layout_constraintEnd_toStartOf="@+id/icShare"
        app:layout_constraintTop_toTopOf="@+id/icShare" />

    <ImageView
        android:id="@+id/icShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/filter"
        android:focusable="true"
        android:foreground="@drawable/ripple_10"
        android:padding="10dp"
        android:src="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtHomeTeam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/font_poppins_semibold"
        android:text="@string/home_team"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txtScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txtHomeTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font_roboto_medium"
        android:textColor="@color/black_pearly"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/txtHomeTeam"
        app:layout_constraintStart_toStartOf="@+id/txtHomeTeam"
        app:layout_constraintTop_toBottomOf="@+id/txtHomeTeam"
        tools:text="Gençlerbirliği" />


    <TextView
        android:id="@+id/txtAwayTeam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_poppins_semibold"
        android:text="@string/away_team"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtHomeTeam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtScore"
        app:layout_constraintTop_toTopOf="@+id/txtHomeTeam" />

    <TextView
        android:id="@+id/txtAwayTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font_roboto_medium"
        android:textColor="@color/black_pearly"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/txtAwayTeam"
        app:layout_constraintStart_toStartOf="@+id/txtAwayTeam"
        app:layout_constraintTop_toBottomOf="@+id/txtAwayTeam"
        tools:text="Gençlerbirliği" />


    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_5"
        android:backgroundTint="@color/black_pearly"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtHomeTeamName"
        app:layout_constraintEnd_toStartOf="@+id/txtAwayTeam"
        app:layout_constraintStart_toEndOf="@+id/txtHomeTeam"
        app:layout_constraintTop_toTopOf="@+id/txtHomeTeam"
        tools:text="0 - 0" />

    <TextView
        android:id="@+id/textview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/font_roboto_bold"
        android:text="@string/match_status"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/icBack"
        app:layout_constraintTop_toBottomOf="@+id/txtHomeTeamName" />

    <TextView
        android:id="@+id/txtMatchStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/rounded_5"
        android:backgroundTint="@color/ultimate_orange"
        android:fontFamily="@font/font_roboto_medium"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="2.yarı"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textview5"
        app:layout_constraintStart_toEndOf="@+id/textview5"
        app:layout_constraintTop_toTopOf="@+id/textview5" />


    <ImageView
        android:id="@+id/icStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        android:src="@drawable/ic_star_outline"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtMatchStatus" />


</androidx.constraintlayout.widget.ConstraintLayout>